fix layout on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ header {
   flex-wrap: wrap;
 }
 
+nav {
+  max-width: 200px;
+}
+
 nav,
 aside {
   flex-grow: 1;
@@ -46,8 +50,20 @@ main {
 @media (max-width: 900px) {
   .columns {
     flex-direction: column;
+    height: 100%;
   }
+  main {
+    border-left: none;
+    border-right: none;
+    border-top: 1px solid var(--gray);
+    border-bottom: 1px solid var(--gray);
+    flex-grow: 0;
+    height: 100%;
+  }
+  nav,
   aside {
     max-width: 100%;
+    text-align: center;
+    flex-grow: 0;
   }
 }
